--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 11:34:00 AM</p>
+    <p class="lastupdate">09/17/2020 11:39:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">75.2&#176;F</td>
+        <td class="data">75.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">75.2&#176;F</td>
+        <td class="data">75.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">75.2&#176;F</td>
+        <td class="data">75.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.4&#176;F</td>
+        <td class="data">52.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.950 inHg (-0.007)</td>
+        <td class="data">29.949 inHg (-0.002)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph N (0&#176;)</td>
+        <td class="data">1 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.4&#176;F</td>
+        <td class="data">74.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:33:39 AM">
-            75.2</span><br/>
+          <span title="11:37:03 AM">
+            75.4</span><br/>
           <span title="06:56:13 AM">
             50.8</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:33:39 AM" class="hival">
-            75.2</span>
+          <span title="11:37:03 AM" class="hival">
+            75.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:20:06 AM">
             80</span><br/>
-          <span title="11:30:11 AM">
-            45</span>
+          <span title="11:37:51 AM">
+            44</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          53
+          49
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 20 hours, 47 minutes</td>
+      <td class="data">15 days, 20 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 20 hours, 47 minutes</td>
+      <td class="data">15 days, 20 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
