--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 11:59:00 AM</p>
+    <p class="lastupdate">09/17/2020 12:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,8 +84,8 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">78.9<br/>
-            <span class="timestamp">11:58:55 AM</span><br/>
+          <td class="data new_row">79.5<br/>
+            <span class="timestamp">12:03:43 PM</span><br/>
             50.8<br/>
             <span class="timestamp">06:56:13 AM</span>
           </td>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">78.9<br/>
-            <span class="timestamp">11:58:55 AM</span>
+          <td class="data new_row">79.5<br/>
+            <span class="timestamp">12:03:43 PM</span>
           </td>
           <td class="data new_row">96.4<br/>
             <span class="timestamp">02:42:47 PM (Wednesday)</span>
@@ -152,7 +152,7 @@
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">53.6<br/>
-            <span class="timestamp">11:45:25 AM</span><br/>
+            <span class="timestamp">12:02:51 PM</span><br/>
             41.4<br/>
             <span class="timestamp">05:31:48 AM</span>
           </td>
@@ -182,8 +182,8 @@
           <td class="units">%</td>
           <td class="data new_row">80<br/>
             <span class="timestamp">06:20:06 AM</span><br/>
-            41<br/>
-            <span class="timestamp">11:54:57 AM</span>
+            40<br/>
+            <span class="timestamp">12:03:29 PM</span>
           </td>
           <td class="data new_row">95<br/>
             <span class="timestamp">07:40:53 AM (Monday)</span><br/>
@@ -335,7 +335,7 @@
           </td>
           <td class="data new_row">
             0<br/>
-            49
+            48
           </td>
           <td class="data new_row">
             1<br/>
