--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 12:04:00 PM</p>
+    <p class="lastupdate">09/17/2020 12:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">79.5&#176;F</td>
+        <td class="data">80.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">79.5&#176;F</td>
+        <td class="data">80.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">79.5&#176;F</td>
+        <td class="data">80.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.0&#176;F</td>
+        <td class="data">53.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.940 inHg (-0.019)</td>
+        <td class="data">29.937 inHg (-0.021)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.0&#176;F</td>
+        <td class="data">75.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">40%</td>
+        <td class="data">41%</td>
       </tr>
     </tbody>
   </table>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:03:43 PM">
-            79.5</span><br/>
+          <span title="12:08:29 PM">
+            80.4</span><br/>
           <span title="06:56:13 AM">
             50.8</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:03:43 PM" class="hival">
-            79.5</span>
+          <span title="12:08:29 PM" class="hival">
+            80.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:02:51 PM">
-            53.6</span><br/>
+          <span title="12:05:05 PM">
+            54.0</span><br/>
           <span title="05:31:48 AM">
             41.4</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          48
+          45
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -505,8 +505,8 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="04:59:00 AM">
-            40</span><br/>
+          <span title="12:05:01 PM">
+            41</span><br/>
           <span title="01:17:00 AM">
             37</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 21 hours, 17 minutes</td>
+      <td class="data">15 days, 21 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 21 hours, 17 minutes</td>
+      <td class="data">15 days, 21 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
